fixed overflowing canvas

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -350,8 +350,8 @@ nav .btn:first-child,
 
 canvas {
   margin: 20px 20px 0;
-  width: 280px;
-  height: 280px;
+  width: 280px !important;
+  height: 280px !important;
 }
 
 .btn-clear-data {
